add block diagrams to all exercises of day 1

--- a/day 1/exercise_2_adding_storage_units.ipynb
+++ b/day 1/exercise_2_adding_storage_units.ipynb
@@ -32,7 +32,9 @@
     "> **Remarks:** \n",
     "> \n",
     "> - While the exercises focus on electricity storage, the same concepts can be applied to create storage solutions for other energy carriers. \n",
-    "> - In these exercises, we will only work with `StorageUnit` component, meaning energy-to-power ratio for storage plant is fixed. To optimize the storage energy capacity independently from the storage power capacity (e.g., in case of hydrogen or gas storage), you should use a fundamental `Store` component in combination with two `Link` components, one for charging and one for discharging (Have a look at this [PyPSA example](https://pypsa.readthedocs.io/en/latest/examples/replace-generator-storage-units-with-store.html)). We will touch on this implementation on day 2 of the training."
+    "> - In these exercises, we will only work with `StorageUnit` component, meaning energy-to-power ratio for storage plant is fixed. To optimize the storage energy capacity independently from the storage power capacity (e.g., in case of hydrogen or gas storage), you should use a fundamental `Store` component in combination with two `Link` components, one for charging and one for discharging (Have a look at this [PyPSA example](https://pypsa.readthedocs.io/en/latest/examples/replace-generator-storage-units-with-store.html)). We will touch on this implementation on day 2 of the training.\n",
+    "\n",
+    "<img src=\"../data/block diagrams/d1_e2-1.svg\" width=500/>"
    ]
   },
   {
