--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -30,14 +30,16 @@
     "\n",
     "**Build a network in PyPSA with one node (`bus`) named \"Utopia\" and attach an electricity load (`load`) to it. For simplicity, we assume the load profile to be flat for now. Afterwards, we want to supply electricity by attaching one gas-fired power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/index.html) and the [minimal lopf example](https://pypsa.readthedocs.io/en/latest/examples/minimal_example_pf.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa.readthedocs.io/en/latest/user-guide/optimal-power-flow.html).**\n",
     "\n",
-    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
+    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters.\n",
+    "\n",
+    "<img src=\"../data/block diagrams/d1_e1-1.svg\" width=300/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Initialize network"
+    "Initialize network"
    ]
   },
   {
@@ -210,7 +212,9 @@
     "***\n",
     "Check-point 2:\n",
     "\n",
-    "**Remove the generator from the previous exercise and replace it with two actual power plants: one nuclear and one gas-fired. The annualized capital costs and marginal costs for these plants should be calculated using the provided input parameters. Instead of setting the plant capacities exogenously, allow the model to determine the optimal capacities based on the linear optimization problem with power flow (LOPF).**"
+    "**Remove the generator from the previous exercise and replace it with two actual power plants: one nuclear and one gas-fired. The annualized capital costs and marginal costs for these plants should be calculated using the provided input parameters. Instead of setting the plant capacities exogenously, allow the model to determine the optimal capacities based on the linear optimization problem with power flow (LOPF).**\n",
+    "\n",
+    "<img src=\"../data/block diagrams/d1_e1-2.svg\" width=350/>"
    ]
   },
   {
@@ -436,7 +440,9 @@
     "\n",
     "**Add a Variable Renewable Energy (VRE) power plant to the network: Solar PV with extendable capacity.**\n",
     "\n",
-    "**Hint:** Solar PV can only provide electricity during day time and its generation pattern depends on solar irradiation."
+    "**Hint:** Solar PV can only provide electricity during day time and its generation pattern depends on solar irradiation.\n",
+    "\n",
+    "<img src=\"../data/block diagrams/d1_e1-3.svg\" width=500/>"
    ]
   },
   {
@@ -586,13 +592,6 @@
     "# Exporting check-point 3 network\n",
     "network.export_to_netcdf(\"../results/network_d1_e1-3.nc\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
