--- a/day 1/exercise_3_working_with_pypsa_links_solution.ipynb
+++ b/day 1/exercise_3_working_with_pypsa_links_solution.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "*Build a network in PyPSA with the two buses North and South and attach the `100MW` electricity load at each bus. North bus is attached with a `gas_power_plant`, while South is attached by a `solar farm` with flexible capacities. All plants' techno-economic parameters are provided. Afterward, use `link` to connect the two buses and observe the power exchange between two buses.*\n",
     "\n",
-    "<img src=\"d1_e3-1.svg\" width=500/>"
+    "<img src=\"../data/block diagrams/d1_e3-1.svg\" width=500/>"
    ]
   },
   {
@@ -314,7 +314,7 @@
     "\n",
     "*In this exercise, we will simulate a gas-fired power plant using the `link` component instead of the `generator`. To set it up, we will create a theoretical gas supply bus (With theoretical gas supply `generator` attached to it) and connect it to an electricity bus with an electrical load through the `link` component* \n",
     "\n",
-    "<img src=\"d1_e3-2.svg\" width=200/>"
+    "<img src=\"../data/block diagrams/d1_e3-2.svg\" width=200/>"
    ]
   },
   {
@@ -499,7 +499,7 @@
     "\n",
     "> **Hint:** Links can also be defined with multiple outputs in fixed ratio to the power in the single input by defining new columns bus2, bus3, etc. in network.links along with associated columns for efficiency2, efficiency3, etc. The different outputs are then equal to the input multiplied by the corresponding efficiency. For more information about this, checkout [PyPSA documentation about multi-link](https://pypsa.readthedocs.io/en/latest/user-guide/components.html#multilink)\n",
     "\n",
-    "<img src=\"d1_e3-3.svg\" width=500/>"
+    "<img src=\"../data/block diagrams/d1_e3-3.svg\" width=500/>"
    ]
   },
   {
