review day-2 exercises and add block diagrams to them

--- a/day 2/excercise_1_basic_green_h2_system_solution.ipynb
+++ b/day 2/excercise_1_basic_green_h2_system_solution.ipynb
@@ -30,16 +30,18 @@
     "**Build a network in PyPSA with two nodes (`bus`) and following components to build a simple green hydrogen production system:**\n",
     "\n",
     "1. An `Electricity` bus with electricity as `carrier`.\n",
-    "   1. A wind generator inside this bus.\n",
-    "   2. A load_shedding generator inside this bus.\n",
+    "   1. A wind generator connected to this bus.\n",
+    "   2. A load_shedding generator connected to this bus.\n",
     "2. A `Hydrogen` bus with hydrogen as `carrier`.\n",
-    "   1. A hydrogen demand load inside this bus.\n",
+    "   1. A hydrogen demand load connected to this bus.\n",
     "3. An electrolyser link to convert electricity into hydrogen.\n",
     "\n",
-    "**For simplicity, we assume the hydrogen demand profile to be flat for now. Afterwards, we want to supply electricy by attaching one renewable power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [minimal lopf example](https://pypsa.readthedocs.io/en/latest/examples/lopf-with-heating.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**\n",
+    "**For simplicity, we assume the hydrogen demand profile to be flat for now. Afterwards, we want to supply electricy by attaching one renewable power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [Minimal LOPF example](https://pypsa.readthedocs.io/en/latest/examples/minimal_example_pf.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**\n",
     "\n",
     "\n",
-    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
+    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters.\n",
+    "\n",
+    "<img src=\"../data/block diagrams/d2_e1-1.svg\" width=350/>"
    ]
   },
   {
@@ -170,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a wind generator at the electricity bus with a initial capacity of `100MW`, maximum capacity of `500MW`, and marginal cost of `0$/MWh` into the network. The name of the generator can be `onshore_wind`. "
+    "Add a wind generator at the electricity bus with an initial capacity of `100MW`, maximum capacity of `500MW`, and marginal cost of `0$/MWh` into the network. The name of the generator can be `onshore_wind`. "
    ]
   },
   {
@@ -187,7 +189,7 @@
     "      p_nom_extendable=True,\n",
     "      p_nom=100, # MW\n",
     "      p_nom_max=500, # MW\n",
-    "      marginal_cost=0, #$/MWh\n",
+    "      marginal_cost=0, # $/MWh\n",
     "      p_max_pu=wind_profile\n",
     ")"
    ]
@@ -209,13 +211,13 @@
    "source": [
     "# Electrolyser's techno-economic parameters are given as:\n",
     "eur_to_usd = 1.1\n",
-    "lifetime = 10\n",
+    "lifetime = 20\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1590*eur_to_usd # $/MW\n",
-    "FOM = 32*eur_to_usd  # $/MW fixed\n",
+    "CAPEX = 1590 * eur_to_usd # $/MW\n",
+    "FOM = 32 * eur_to_usd  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
-    "efficiency = 0.65"
+    "efficiency = 0.59"
    ]
   },
   {
@@ -247,8 +249,8 @@
     "    bus1=\"hydrogen\",\n",
     "    p_nom_extendable=True,\n",
     "    p_nom=20,\n",
-    "    capital_cost=annualized_capex + FOM, #$/MW\n",
-    "    marginal_cost=VOM, #$/MWh\n",
+    "    capital_cost=annualized_capex + FOM, # $/MW\n",
+    "    marginal_cost=VOM, # $/MWh\n",
     "    efficiency=efficiency,\n",
     "    lifetime=lifetime\n",
     ")"
@@ -282,7 +284,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a load shedding generator at the electricity bus with marginal cost of `9999$/MWh` (or any large figures) into the network? The name of the generator can be `load_shedding`. "
+    "Add a load shedding generator at the electricity bus with marginal cost of `9999$/MWh` (or any large figures) into the network. The name of the generator can be `load_shedding`. \n",
+    "\n",
+    "The reason for adding load shedding is to ensure the demand is always met. Of course since its marginal cost is very high, the wind onshore generation always comes first and only when it is not enough, the load shedding generator is used. This generator does not represent a real component in the network and is only used here to prevent infeasible solutions from the optimization."
    ]
   },
   {
@@ -376,7 +380,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e2-1.nc\")"
+    "network.export_to_netcdf(\"../results/network_d2_e1-1.nc\")"
    ]
   },
   {
@@ -386,7 +390,9 @@
     "***\n",
     "Check-point 2:\n",
     "\n",
-    "**Add a solar generator so that we will have two generators + one load-shedding generator in the system**"
+    "**Add a solar generator so that we will have two generators + one load-shedding generator in the system**\n",
+    "\n",
+    "<img src=\"../data/block diagrams/d2_e1-2.svg\" width=500/>"
    ]
   },
   {
@@ -396,7 +402,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 1 network\n",
-    "network = pypsa.Network(\"../results/network_d2_e2-1.nc\")"
+    "network = pypsa.Network(\"../results/network_d2_e1-1.nc\")"
    ]
   },
   {
@@ -441,7 +447,7 @@
     "      p_nom_extendable=True,\n",
     "      p_nom=50,\n",
     "      p_nom_max=500, # MW\n",
-    "      marginal_cost=0, #$/MWh\n",
+    "      marginal_cost=0, # $/MWh\n",
     "      p_max_pu=solar_profile\n",
     ")"
    ]
@@ -508,20 +514,13 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 2 network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e2-2.nc\")"
+    "network.export_to_netcdf(\"../results/network_d2_e1-2.nc\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.10 ('pypsa-agora')",
+   "display_name": "pypsa-agora-h2",
    "language": "python",
    "name": "python3"
   },
@@ -536,11 +535,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "d33265b03f0fd43aaae402ef36c78c0dc6832657a131e746ad77efa446788bb3"
-   }
   }
  },
  "nbformat": 4,
