--- a/day 2/excercise_2_hydrogen_storage.ipynb
+++ b/day 2/excercise_2_hydrogen_storage.ipynb
@@ -31,22 +31,24 @@
     "**Build a network in PyPSA with two nodes (`bus`) and following components to build a simple green hydrogen production system:**\n",
     "\n",
     "1. A `Hydrogen` bus with hydrogen as `carrier`.\n",
-    "   1. A hydrogen demand load inside this bus.\n",
+    "   1. A hydrogen demand load connected to this bus.\n",
     "2. A `Hydrogen_storage` bus with hydrogen as `carrier`.\n",
-    "   1. A hydrogen store inside this bus.\n",
-    "3. A bidirectional link to transfar the hydrogen between hydrogen and hydrogen storage buses.\n",
+    "   1. A hydrogen store connected to this bus.\n",
+    "3. A bi-directional link to transfer the hydrogen between hydrogen and hydrogen storage buses.\n",
     "\n",
     "\n",
     "**For simplicity, we assume the hydrogen demand profile to be flat for now. For help, you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**\n",
     "\n",
-    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
+    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters.\n",
+    "\n",
+    "<img src=\"../data/block diagrams/d2_e2-1.svg\" width=600/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Initialize network"
+    "Initialize network"
    ]
   },
   {
