--- a/day 2/excercise_2_hydrogen_storage_solution.ipynb
+++ b/day 2/excercise_2_hydrogen_storage_solution.ipynb
@@ -31,22 +31,24 @@
     "**Build a network in PyPSA with two nodes (`bus`) and following components to build a simple green hydrogen production system:**\n",
     "\n",
     "1. A `Hydrogen` bus with hydrogen as `carrier`.\n",
-    "   1. A hydrogen demand load inside this bus.\n",
+    "   1. A hydrogen demand load connected to this bus.\n",
     "2. A `Hydrogen_storage` bus with hydrogen as `carrier`.\n",
-    "   1. A hydrogen store inside this bus.\n",
-    "3. A bidirectional link to transfar the hydrogen between hydrogen and hydrogen storage buses.\n",
+    "   1. A hydrogen store connected to this bus.\n",
+    "3. A bi-directional link to transfer the hydrogen between hydrogen and hydrogen storage buses.\n",
     "\n",
     "\n",
     "**For simplicity, we assume the hydrogen demand profile to be flat for now. For help, you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**\n",
     "\n",
-    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
+    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters.\n",
+    "\n",
+    "<img src=\"../data/block diagrams/d2_e2-1.svg\" width=600/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Initialize network"
+    "Initialize network"
    ]
   },
   {
@@ -139,7 +141,7 @@
     "      e_nom_extendable=True,\n",
     "      e_cyclic=False,\n",
     "      e_initial=87600, # MWh\n",
-    "      marginal_cost=0, #$/MWh\n",
+    "      marginal_cost=0, # $/MWh\n",
     "      )"
    ]
   },
@@ -147,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a bidirectional link, representing the hydrogen charging and discharging between hydrogen and hydrogen_storage with marginal cost of `0$/MWh` into the network? The name of the link can be `hydrogen_flow`. "
+    "Add a bidirectional link, representing the hydrogen charging and discharging between hydrogen and hydrogen_storage with marginal cost of `0$/MWh` into the network. The name of the link can be `hydrogen_flow`. "
    ]
   },
   {
@@ -236,20 +238,13 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e3-1.nc\")"
+    "network.export_to_netcdf(\"../results/network_d2_e2-1.nc\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.10 ('pypsa-agora')",
+   "display_name": "pypsa-agora-h2",
    "language": "python",
    "name": "python3"
   },
@@ -264,11 +259,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "d33265b03f0fd43aaae402ef36c78c0dc6832657a131e746ad77efa446788bb3"
-   }
   }
  },
  "nbformat": 4,
