--- a/day 2/excercise_3_complete_green_h2_system.ipynb
+++ b/day 2/excercise_3_complete_green_h2_system.ipynb
@@ -41,28 +41,30 @@
     "*** \n",
     "Check-point 1:\n",
     "\n",
-    "**Build a network in PyPSA with three nodes (`bus`) and following components to build a simple green hydrogen production system:**\n",
+    "**Build a network in PyPSA with three nodes (`bus`) and the following components to model a simple green hydrogen production system:**\n",
     "\n",
     "1. An `Electricity` bus with electricity as `carrier`.\n",
-    "   1. A wind generator inside this bus.\n",
-    "   2. A solar generator inside this bus.\n",
+    "   1. A wind generator connected to this bus.\n",
+    "   2. A solar generator connected to this bus.\n",
     "2. A `Hydrogen` bus with hydrogen as `carrier`.\n",
-    "   1. A hydrogen demand load inside this bus.\n",
+    "   1. A hydrogen demand load connected to this bus.\n",
     "3. An electrolyser link to convert electricity into hydrogen.\n",
     "4. A `Hydrogen_storage` bus with hydrogen as `carrier`.\n",
-    "   1. A hydrogen store inside this bus.\n",
-    "5. A bidirectional link to transfar the hydrogen between hydrogen and hydrogen storage buses.\n",
+    "   1. A hydrogen store connected to this bus.\n",
+    "5. A bi-directional link to transfer the hydrogen between hydrogen and hydrogen storage buses.\n",
     "\n",
-    "**For simplicity, we assume the hydrogen demand profile to be flat for now. Afterwards, we want to supply electricy by attaching one renewable power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [minimal lopf example](https://pypsa.readthedocs.io/en/latest/examples/lopf-with-heating.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**\n",
+    "**For simplicity, we assume the hydrogen demand profile to be flat for now. Afterwards, we want to supply electricy by attaching one renewable power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [minimal lopf example](https://pypsa.readthedocs.io/en/latest/examples/minimal_example_pf.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**\n",
     "\n",
-    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
+    "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters.\n",
+    "\n",
+    "<img src=\"../data/block diagrams/d2_e3-1.svg\" width=600/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Initialize network"
+    "Initialize network"
    ]
   },
   {
@@ -187,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a store at the hydrogen_storage bus with a initial energy capacity of `0MWh`, and marginal cost of `0$/MWh` into the network? The name of the store can be `hydrogen_tank`. "
+    "Add a store at the hydrogen_storage bus with a initial energy capacity of `0MWh`, and marginal cost of `0$/MWh` into the network. The name of the store can be `hydrogen_tank`. "
    ]
   },
   {
@@ -252,8 +254,8 @@
     "lifetime = 25\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1420*eur_to_usd # $/MW\n",
-    "FOM = 28*eur_to_usd  # $/MW fixed\n",
+    "CAPEX = 1420 * eur_to_usd # $/MW\n",
+    "FOM = 28 * eur_to_usd  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
     "\n",
     "efficiency = 1"
@@ -299,12 +301,12 @@
    "outputs": [],
    "source": [
     "# Solar's techno-economic parameters are given as:\n",
-    "eur_to_usd = 1.1\n",
+    "eur_to_use = 1.1\n",
     "lifetime = 20\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 970*eur_to_usd # $/MW\n",
-    "FOM = 16*eur_to_usd  # $/MW fixed\n",
+    "CAPEX = 970  *eur_to_use # $/MW\n",
+    "FOM = 16 * eur_to_use  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
     "\n",
     "efficiency = 1"
@@ -340,13 +342,13 @@
    "source": [
     "# Electrolyser's techno-economic parameters are given as:\n",
     "eur_to_usd = 1.1\n",
-    "lifetime = 10\n",
+    "lifetime = 20\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1590*eur_to_usd # $/MW\n",
-    "FOM = 32*eur_to_usd  # $/MW fixed\n",
+    "CAPEX = 1590 * eur_to_usd # $/MW\n",
+    "FOM = 32 * eur_to_usd  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
-    "efficiency = 0.65"
+    "efficiency = 0.59"
    ]
   },
   {
@@ -411,7 +413,7 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 1 network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e4-1.nc\")"
+    "network.export_to_netcdf(\"../results/network_d2_e3-1.nc\")"
    ]
   },
   {
@@ -421,7 +423,12 @@
     "***\n",
     "Check-point 2:\n",
     "\n",
-    "**Remove the electrolyser link from the previous exercise and replace it with a new electrolyser link including compressor with cost assumption and efficiency adjustment**"
+    "**Instead of the fixed hydrogen load add an hourly one at the hydrogen bus according to the daily pattern of industrial hydrogen demand (`100MW per hour` from 1am to 7pm, followed by a 5-hour shutdown). The name of the load can be `hydroge_load`**\n",
+    "\n",
+    "**Then remove the electrolyser link from the previous exercise and replace it with a new electrolyser link including the compressor needed to pressurize the produced hydrogen. Cost assumptions and the efficiency of this component must be adjusted**\n",
+    "\n",
+    "The block diagram representing the system remains the same as before:\n",
+    "<img src=\"../data/block diagrams/d2_e3-1.svg\" width=600/>"
    ]
   },
   {
@@ -431,7 +438,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 1 network\n",
-    "network = pypsa.Network(\"../results/network_d2_e4-1.nc\")"
+    "network = pypsa.Network(\"../results/network_d2_e3-1.nc\")"
    ]
   },
   {
@@ -458,9 +465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a hourly hydrogen load at the hydrogen bus according to the daily pattern of industrial hydrogen demand (`100MW per hour` from 1am to 7pm, and with a shutodwn of 5 hours). The name of the load can be `hydroge_load`\n",
-    "\n",
-    "**To set hourly hydrogen demand, you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year.For help, you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**"
+    "To set hourly hydrogen demand, you need to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year. For help, please see the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html). Make sure you understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html)."
    ]
   },
   {
@@ -506,33 +511,34 @@
    "source": [
     "# Electrolyser's techno-economic parameters are given as:\n",
     "eur_to_usd = 1.1\n",
-    "lifetime = 10\n",
+    "lifetime = 20\n",
     "interest = 0.05\n",
-    "water_cost = 1.8 # EUR/m3, seawater\n",
-    "water_conversion_cost= 21 # kgH2O/kgH2\n",
+    "water_cost = 1.8 # EUR/m3_H2O --> this includes the water treatment costs applied to the seawater\n",
+    "water_demand_ratio= 21 # kgH2O/kgH2 --> how much water is needed to produce 1 kg of hydrogen?\n",
     "\n",
-    "CAPEX = 1590*eur_to_usd # $/MW\n",
-    "FOM = 32*eur_to_usd  # $/MW fixed\n",
+    "CAPEX = 1590 * eur_to_usd # $/MW\n",
+    "FOM = 32 * eur_to_usd  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
+    "efficiency = 0.59\n",
     "\n",
-    "# calculate marginal cost for water consumption (EUR/MWh)\n",
-    "# =water_cost*water_converstion_cost/(33.33(kWh)/1000)\n",
-    "water_cost = ((water_cost/1000)*water_conversion_cost)/(33.33/1000)*eur_to_usd # 1kgH2 = 33.33kWh\n",
+    "# Calculate marginal cost for water consumption\n",
+    "# marginal cost [USD/MWh] = \n",
+    "# water_cost [EUR/m3_H2O] * eur_to_usd [USD/EUR] / 1000 [kgH2O/m3_H2O] * water_demand_ratio [kgH2O/kgH2] / (33.33/1000 [MWh/kgH2])\n",
+    "water_cost = ((water_cost * eur_to_usd / 1000) * water_demand_ratio) / (33.33 / 1000) # 1 kgH2 = 33.33 kWh = 0.03333 MWh\n",
     "\n",
-    "efficiency = 0.65\n",
-    "\n",
-    "\n",
-    "# Adding compressor to compress hydrogen from electrolyser into hydrogen storage\n",
-    "# 1. Convert electricity consumption for compressor from kWh_el/kg_h2 into kWh_el/kWh_h2\n",
-    "# 2. the new value represents the share of electricity consumption, and the rest of share will be used for electrolyzer.\n",
-    "electricity_consumption = 0.6  # kWh/kgH2\n",
-    "elect_share = 1 - (electricity_consumption/33.33)\n",
-    "new_efficiency = efficiency*elect_share\n",
+    "# Add a compressor to pressurize hydrogen produced by the electrolyser and feed it to the hydrogen storage\n",
+    "# 1. Calculate the specific electricity consumption for compressor in kWh_el/kWh_H2. Assumption: 0.6 [kWh_el/kgH2]\n",
+    "# 2. Calculate the specific energy consumption for the electrolyser in kWh_el/kWh_H2. This corresponds to the reciprocal of the electrolyser's efficiency.\n",
+    "# 3. The sum of the two specific energy consumptions represents the total specific energy consumption for the electrolyser including compressor.\n",
+    "# 4. Calculate the new efficiency of the electrolyser which is the reciprocal of the total specific energy consumption.\n",
+    "specific_consumption_compressor = 0.6 / 33.33  # 0.6 [kWh_el/kgH2] / 33.33 [kWh_H2/kgH2] --> kWh_el/kWh_H2\n",
+    "specific_consumption_electrolyser = 1 / efficiency # unit: kWh_el/kWh_H2\n",
+    "new_efficiency = 1 / (specific_consumption_compressor + specific_consumption_electrolyser)\n",
     "\n",
     "# Compressor's techno-economic parameters are given as:\n",
     "lifetime_com = 25\n",
-    "CAPEX_COM = 1720*eur_to_usd # $/MW\n",
-    "FOM_COM = 34*eur_to_usd  # $/MW fixed\n",
+    "CAPEX_COM = 1720 * eur_to_usd # $/MW\n",
+    "FOM_COM = 34 * eur_to_usd  # $/MW fixed\n",
     "VOM_COM = 0 # $/MWh variable"
    ]
   },
@@ -592,7 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect the change of energy capacity in hydrogen_tank store to supply loads\n",
+    "# Inspect the change of energy capacity [MWh] in hydrogen_tank store to supply loads\n",
     "???"
    ]
   },
@@ -602,7 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect the change of energy capacity in hydrogen_tank store to supply loads\n",
+    "# Inspect the change of power [MW] in hydrogen_tank store to supply loads\n",
     "???"
    ]
   },
@@ -612,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect the electrolysis conversion\n",
+    "# Inspect the electrolysis input power\n",
     "???"
    ]
   },
