move solution files into dedicated folders

--- a/day 2/solutions/excercise_1_basic_green_h2_system_solution.ipynb
+++ b/day 2/solutions/excercise_1_basic_green_h2_system_solution.ipynb
@@ -88,9 +88,11 @@
    "outputs": [],
    "source": [
     "# Import an example of wind daily pattern\n",
-    "wind_pattern = pd.read_csv(\"../data/weather data/example_onshore_wind_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "wind_pattern = pd.read_csv(\n",
+    "    \"../../data/weather data/example_onshore_wind_daily_pattern.csv\"\n",
+    ")[\"daily pattern\"]\n",
     "# annual time-series availability of onshore wind (just a simplified example)\n",
-    "wind_profile = pd.Series(list(wind_pattern)*365, index=network.snapshots)"
+    "wind_profile = pd.Series(list(wind_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -182,15 +184,15 @@
    "outputs": [],
    "source": [
     "network.add(\n",
-    "      class_name=\"Generator\", \n",
-    "      name=\"onshore_wind\",\n",
-    "      bus=\"electricity\",\n",
-    "      carrier=\"electricity\",\n",
-    "      p_nom_extendable=True,\n",
-    "      p_nom=100, # MW\n",
-    "      p_nom_max=500, # MW\n",
-    "      marginal_cost=0, # $/MWh\n",
-    "      p_max_pu=wind_profile\n",
+    "    class_name=\"Generator\",\n",
+    "    name=\"onshore_wind\",\n",
+    "    bus=\"electricity\",\n",
+    "    carrier=\"electricity\",\n",
+    "    p_nom_extendable=True,\n",
+    "    p_nom=100,  # MW\n",
+    "    p_nom_max=500,  # MW\n",
+    "    marginal_cost=0,  # $/MWh\n",
+    "    p_max_pu=wind_profile,\n",
     ")"
    ]
   },
@@ -214,9 +216,9 @@
     "lifetime = 20\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1590 * eur_to_usd # $/MW\n",
+    "CAPEX = 1590 * eur_to_usd  # $/MW\n",
     "FOM = 32 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "efficiency = 0.59"
    ]
   },
@@ -249,10 +251,10 @@
     "    bus1=\"hydrogen\",\n",
     "    p_nom_extendable=True,\n",
     "    p_nom=20,\n",
-    "    capital_cost=annualized_capex + FOM, # $/MW\n",
-    "    marginal_cost=VOM, # $/MWh\n",
+    "    capital_cost=annualized_capex + FOM,  # $/MW\n",
+    "    marginal_cost=VOM,  # $/MWh\n",
     "    efficiency=efficiency,\n",
-    "    lifetime=lifetime\n",
+    "    lifetime=lifetime,\n",
     ")"
    ]
   },
@@ -303,7 +305,7 @@
     "    carrier=\"electricity\",\n",
     "    p_nom_extendable=True,\n",
     "    marginal_cost=9999,\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -336,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.generators_t.p[:24*7].plot()"
+    "network.generators_t.p[: 24 * 7].plot()"
    ]
   },
   {
@@ -380,7 +382,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e1-1.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d2_e1-1.nc\")"
    ]
   },
   {
@@ -402,7 +404,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 1 network\n",
-    "network = pypsa.Network(\"../results/network_d2_e1-1.nc\")"
+    "network = pypsa.Network(\"../../results/network_d2_e1-1.nc\")"
    ]
   },
   {
@@ -412,9 +414,11 @@
    "outputs": [],
    "source": [
     "# Import an example of solar daily pattern\n",
-    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "solar_pattern = pd.read_csv(\"../../data/weather data/example_solar_daily_pattern.csv\")[\n",
+    "    \"daily pattern\"\n",
+    "]\n",
     "# annual time-series availability of solar (just a simplified example)\n",
-    "solar_profile = pd.Series(list(solar_pattern)*365, index=network.snapshots)"
+    "solar_profile = pd.Series(list(solar_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -440,15 +444,15 @@
    "outputs": [],
    "source": [
     "network.add(\n",
-    "      class_name=\"Generator\", \n",
-    "      name=\"solar\",\n",
-    "      bus=\"electricity\",\n",
-    "      carrier=\"electricity\",\n",
-    "      p_nom_extendable=True,\n",
-    "      p_nom=50,\n",
-    "      p_nom_max=500, # MW\n",
-    "      marginal_cost=0, # $/MWh\n",
-    "      p_max_pu=solar_profile\n",
+    "    class_name=\"Generator\",\n",
+    "    name=\"solar\",\n",
+    "    bus=\"electricity\",\n",
+    "    carrier=\"electricity\",\n",
+    "    p_nom_extendable=True,\n",
+    "    p_nom=50,\n",
+    "    p_nom_max=500,  # MW\n",
+    "    marginal_cost=0,  # $/MWh\n",
+    "    p_max_pu=solar_profile,\n",
     ")"
    ]
   },
@@ -484,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.generators['p_nom_opt']"
+    "network.generators[\"p_nom_opt\"]"
    ]
   },
   {
@@ -494,7 +498,7 @@
    "outputs": [],
    "source": [
     "# Inspect the interaction of different power plants to supply loads\n",
-    "network.generators_t.p[:24*7].plot()"
+    "network.generators_t.p[: 24 * 7].plot()"
    ]
   },
   {
@@ -514,7 +518,7 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 2 network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e1-2.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d2_e1-2.nc\")"
    ]
   }
  ],
