--- a/day 2/solutions/excercise_2_hydrogen_storage_solution.ipynb
+++ b/day 2/solutions/excercise_2_hydrogen_storage_solution.ipynb
@@ -134,15 +134,15 @@
    "outputs": [],
    "source": [
     "network.add(\n",
-    "      class_name=\"Store\",\n",
-    "      name=\"hydrogen_tank\",\n",
-    "      bus=\"hydrogen_storage\",\n",
-    "      carrier=\"hydrogen\",\n",
-    "      e_nom_extendable=True,\n",
-    "      e_cyclic=False,\n",
-    "      e_initial=87600, # MWh\n",
-    "      marginal_cost=0, # $/MWh\n",
-    "      )"
+    "    class_name=\"Store\",\n",
+    "    name=\"hydrogen_tank\",\n",
+    "    bus=\"hydrogen_storage\",\n",
+    "    carrier=\"hydrogen\",\n",
+    "    e_nom_extendable=True,\n",
+    "    e_cyclic=False,\n",
+    "    e_initial=87600,  # MWh\n",
+    "    marginal_cost=0,  # $/MWh\n",
+    ")"
    ]
   },
   {
@@ -159,15 +159,15 @@
    "outputs": [],
    "source": [
     "network.add(\n",
-    "      class_name=\"Link\",\n",
-    "      name=\"hydrogen_flow\",\n",
-    "      bus0=\"hydrogen\",\n",
-    "      bus1=\"hydrogen_storage\",\n",
-    "      p_nom_extendable=True,\n",
-    "      marginal_cost=0, #$/MWh\n",
-    "      efficiency=1,\n",
-    "      p_min_pu=-1\n",
-    "      )"
+    "    class_name=\"Link\",\n",
+    "    name=\"hydrogen_flow\",\n",
+    "    bus0=\"hydrogen\",\n",
+    "    bus1=\"hydrogen_storage\",\n",
+    "    p_nom_extendable=True,\n",
+    "    marginal_cost=0,  # $/MWh\n",
+    "    efficiency=1,\n",
+    "    p_min_pu=-1,\n",
+    ")"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e2-1.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d2_e2-1.nc\")"
    ]
   }
  ],
