--- a/day 2/solutions/excercise_3_complete_green_h2_system_solution.ipynb
+++ b/day 2/solutions/excercise_3_complete_green_h2_system_solution.ipynb
@@ -104,9 +104,11 @@
    "outputs": [],
    "source": [
     "# Import an example of wind daily pattern\n",
-    "wind_pattern = pd.read_csv(\"../data/weather data/example_onshore_wind_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "wind_pattern = pd.read_csv(\n",
+    "    \"../../data/weather data/example_onshore_wind_daily_pattern.csv\"\n",
+    ")[\"daily pattern\"]\n",
     "# annual time-series availability of onshore wind (just a simplified example)\n",
-    "wind_profile = pd.Series(list(wind_pattern)*365, index=network.snapshots)"
+    "wind_profile = pd.Series(list(wind_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -116,9 +118,11 @@
    "outputs": [],
    "source": [
     "# Import an example of solar daily pattern\n",
-    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "solar_pattern = pd.read_csv(\"../../data/weather data/example_solar_daily_pattern.csv\")[\n",
+    "    \"daily pattern\"\n",
+    "]\n",
     "# annual time-series availability of solar (just a simplified example)\n",
-    "solar_profile = pd.Series(list(solar_pattern)*365, index=network.snapshots)"
+    "solar_profile = pd.Series(list(solar_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -217,14 +221,14 @@
    "outputs": [],
    "source": [
     "network.add(\n",
-    "      class_name=\"Store\",\n",
-    "      name=\"hydrogen_tank\",\n",
-    "      bus=\"hydrogen_storage\",\n",
-    "      carrier=\"hydrogen\",\n",
-    "      e_nom_extendable=True,\n",
-    "      e_cyclic=True,\n",
-    "      marginal_cost=0, #$/MWh\n",
-    "      )"
+    "    class_name=\"Store\",\n",
+    "    name=\"hydrogen_tank\",\n",
+    "    bus=\"hydrogen_storage\",\n",
+    "    carrier=\"hydrogen\",\n",
+    "    e_nom_extendable=True,\n",
+    "    e_cyclic=True,\n",
+    "    marginal_cost=0,  # $/MWh\n",
+    ")"
    ]
   },
   {
@@ -241,15 +245,15 @@
    "outputs": [],
    "source": [
     "network.add(\n",
-    "      class_name=\"Link\",\n",
-    "      name=\"hydrogen_flow\",\n",
-    "      bus0=\"hydrogen\",\n",
-    "      bus1=\"hydrogen_storage\",\n",
-    "      p_nom_extendable=True,\n",
-    "      marginal_cost=0, #$/MWh\n",
-    "      efficiency=1,\n",
-    "      p_min_pu=-1\n",
-    "      )"
+    "    class_name=\"Link\",\n",
+    "    name=\"hydrogen_flow\",\n",
+    "    bus0=\"hydrogen\",\n",
+    "    bus1=\"hydrogen_storage\",\n",
+    "    p_nom_extendable=True,\n",
+    "    marginal_cost=0,  # $/MWh\n",
+    "    efficiency=1,\n",
+    "    p_min_pu=-1,\n",
+    ")"
    ]
   },
   {
@@ -272,9 +276,9 @@
     "lifetime = 25\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1420 * eur_to_usd # $/MW\n",
+    "CAPEX = 1420 * eur_to_usd  # $/MW\n",
     "FOM = 28 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "\n",
     "efficiency = 1"
    ]
@@ -288,18 +292,18 @@
     "annualized_capex = calculate_annualised_capex(CAPEX, interest, lifetime)\n",
     "\n",
     "network.add(\n",
-    "    class_name=\"Generator\", \n",
+    "    class_name=\"Generator\",\n",
     "    name=\"onshore_wind\",\n",
     "    bus=\"electricity\",\n",
     "    carrier=\"electricity\",\n",
     "    p_nom_extendable=True,\n",
-    "    p_nom=100, # MW\n",
-    "    p_nom_max=500, # MW\n",
-    "    capital_cost=annualized_capex + FOM, #$/MW\n",
-    "    marginal_cost=VOM, #$/MWh\n",
+    "    p_nom=100,  # MW\n",
+    "    p_nom_max=500,  # MW\n",
+    "    capital_cost=annualized_capex + FOM,  # $/MW\n",
+    "    marginal_cost=VOM,  # $/MWh\n",
     "    efficiency=efficiency,\n",
     "    lifetime=lifetime,\n",
-    "    p_max_pu=wind_profile\n",
+    "    p_max_pu=wind_profile,\n",
     ")"
    ]
   },
@@ -323,9 +327,9 @@
     "lifetime = 20\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 970 * eur_to_use # $/MW\n",
+    "CAPEX = 970 * eur_to_use  # $/MW\n",
     "FOM = 16 * eur_to_use  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "\n",
     "efficiency = 1"
    ]
@@ -339,18 +343,18 @@
     "annualized_capex = calculate_annualised_capex(CAPEX, interest, lifetime)\n",
     "\n",
     "network.add(\n",
-    "    class_name=\"Generator\", \n",
+    "    class_name=\"Generator\",\n",
     "    name=\"solar\",\n",
     "    bus=\"electricity\",\n",
     "    carrier=\"electricity\",\n",
     "    p_nom_extendable=True,\n",
     "    p_nom=50,\n",
-    "    p_nom_max=500, # MW\n",
-    "    capital_cost=annualized_capex + FOM, #$/MW\n",
-    "    marginal_cost=VOM, #$/MWh\n",
+    "    p_nom_max=500,  # MW\n",
+    "    capital_cost=annualized_capex + FOM,  # $/MW\n",
+    "    marginal_cost=VOM,  # $/MWh\n",
     "    efficiency=efficiency,\n",
     "    lifetime=lifetime,\n",
-    "    p_max_pu=solar_profile\n",
+    "    p_max_pu=solar_profile,\n",
     ")"
    ]
   },
@@ -383,9 +387,9 @@
     "lifetime = 20\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1590 * eur_to_usd # $/MW\n",
+    "CAPEX = 1590 * eur_to_usd  # $/MW\n",
     "FOM = 32 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "efficiency = 0.59"
    ]
   },
@@ -404,10 +408,10 @@
     "    bus1=\"hydrogen\",\n",
     "    p_nom_extendable=True,\n",
     "    p_nom=20,\n",
-    "    capital_cost=annualized_capex + FOM, #$/MW\n",
-    "    marginal_cost=VOM, #$/MWh\n",
+    "    capital_cost=annualized_capex + FOM,  # $/MW\n",
+    "    marginal_cost=VOM,  # $/MWh\n",
     "    efficiency=efficiency,\n",
-    "    lifetime=lifetime\n",
+    "    lifetime=lifetime,\n",
     ")"
    ]
   },
@@ -442,7 +446,7 @@
    "outputs": [],
    "source": [
     "# Inspect the interaction of different power plants to supply loads\n",
-    "network.generators_t.p[:24*7].plot()"
+    "network.generators_t.p[: 24 * 7].plot()"
    ]
   },
   {
@@ -470,7 +474,7 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 1 network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e3-1.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d2_e3-1.nc\")"
    ]
   },
   {
@@ -495,7 +499,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 1 network\n",
-    "network = pypsa.Network(\"../results/network_d2_e3-1.nc\")"
+    "network = pypsa.Network(\"../../results/network_d2_e3-1.nc\")"
    ]
   },
   {
@@ -532,9 +536,11 @@
    "outputs": [],
    "source": [
     "# Import an example of wind daily pattern\n",
-    "load_pattern = pd.read_csv(\"../data/weather data/example_industrial_h2_demand_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "load_pattern = pd.read_csv(\n",
+    "    \"../../data/weather data/example_industrial_h2_demand_daily_pattern.csv\"\n",
+    ")[\"daily pattern\"]\n",
     "# annual time-series availability of onshore wind (just a simplified example)\n",
-    "load_profile = pd.Series(list(load_pattern)*365, index=network.snapshots)"
+    "load_profile = pd.Series(list(load_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -543,12 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.add(\n",
-    "    class_name=\"Load\", \n",
-    "    name=\"hydrogen_load\", \n",
-    "    bus=\"hydrogen\", \n",
-    "    p_set=load_profile\n",
-    ")"
+    "network.add(class_name=\"Load\", name=\"hydrogen_load\", bus=\"hydrogen\", p_set=load_profile)"
    ]
   },
   {
@@ -570,33 +571,41 @@
     "eur_to_usd = 1.1\n",
     "lifetime = 20\n",
     "interest = 0.05\n",
-    "water_cost = 1.8 # EUR/m3_H2O --> this includes the water treatment costs applied to the seawater\n",
-    "water_demand_ratio= 21 # kgH2O/kgH2 --> how much water is needed to produce 1 kg of hydrogen?\n",
+    "water_cost = 1.8  # EUR/m3_H2O --> this includes the water treatment costs applied to the seawater\n",
+    "water_demand_ratio = (\n",
+    "    21  # kgH2O/kgH2 --> how much water is needed to produce 1 kg of hydrogen?\n",
+    ")\n",
     "\n",
-    "CAPEX = 1590 * eur_to_usd # $/MW\n",
+    "CAPEX = 1590 * eur_to_usd  # $/MW\n",
     "FOM = 32 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "efficiency = 0.59\n",
     "\n",
     "# Calculate marginal cost for water consumption\n",
-    "# marginal cost [USD/MWh] = \n",
+    "# marginal cost [USD/MWh] =\n",
     "# water_cost [EUR/m3_H2O] * eur_to_usd [USD/EUR] / 1000 [kgH2O/m3_H2O] * water_demand_ratio [kgH2O/kgH2] / (33.33/1000 [MWh/kgH2])\n",
-    "water_cost = ((water_cost * eur_to_usd / 1000) * water_demand_ratio) / (33.33 / 1000) # 1 kgH2 = 33.33 kWh = 0.03333 MWh\n",
+    "water_cost = ((water_cost * eur_to_usd / 1000) * water_demand_ratio) / (\n",
+    "    33.33 / 1000\n",
+    ")  # 1 kgH2 = 33.33 kWh = 0.03333 MWh\n",
     "\n",
     "# Add a compressor to pressurize hydrogen produced by the electrolyser and feed it to the hydrogen storage\n",
     "# 1. Calculate the specific electricity consumption for compressor in kWh_el/kWh_H2. Assumption: 0.6 [kWh_el/kgH2]\n",
     "# 2. Calculate the specific energy consumption for the electrolyser in kWh_el/kWh_H2. This corresponds to the reciprocal of the electrolyser's efficiency.\n",
     "# 3. The sum of the two specific energy consumptions represents the total specific energy consumption for the electrolyser including compressor.\n",
     "# 4. Calculate the new efficiency of the electrolyser which is the reciprocal of the total specific energy consumption.\n",
-    "specific_consumption_compressor = 0.6 / 33.33  # 0.6 [kWh_el/kgH2] / 33.33 [kWh_H2/kgH2] --> kWh_el/kWh_H2\n",
-    "specific_consumption_electrolyser = 1 / efficiency # unit: kWh_el/kWh_H2\n",
-    "new_efficiency = 1 / (specific_consumption_compressor + specific_consumption_electrolyser)\n",
+    "specific_consumption_compressor = (\n",
+    "    0.6 / 33.33\n",
+    ")  # 0.6 [kWh_el/kgH2] / 33.33 [kWh_H2/kgH2] --> kWh_el/kWh_H2\n",
+    "specific_consumption_electrolyser = 1 / efficiency  # unit: kWh_el/kWh_H2\n",
+    "new_efficiency = 1 / (\n",
+    "    specific_consumption_compressor + specific_consumption_electrolyser\n",
+    ")\n",
     "\n",
     "# Compressor's techno-economic parameters are given as:\n",
     "lifetime_com = 25\n",
-    "CAPEX_COM = 1720 * eur_to_usd # $/MW\n",
+    "CAPEX_COM = 1720 * eur_to_usd  # $/MW\n",
     "FOM_COM = 34 * eur_to_usd  # $/MW fixed\n",
-    "VOM_COM = 0 # $/MWh variable"
+    "VOM_COM = 0  # $/MWh variable"
    ]
   },
   {
@@ -615,10 +624,10 @@
     "    bus1=\"hydrogen\",\n",
     "    p_nom_extendable=True,\n",
     "    p_nom=20,\n",
-    "    capital_cost=annualized_capex + FOM + annualized_capex_com + FOM_COM, #$/MW\n",
-    "    marginal_cost=VOM + water_cost + VOM_COM, #$/MWh\n",
+    "    capital_cost=annualized_capex + FOM + annualized_capex_com + FOM_COM,  # $/MW\n",
+    "    marginal_cost=VOM + water_cost + VOM_COM,  # $/MWh\n",
     "    efficiency=new_efficiency,\n",
-    "    lifetime=lifetime\n",
+    "    lifetime=lifetime,\n",
     ")"
    ]
   },
@@ -646,7 +655,7 @@
    "outputs": [],
    "source": [
     "# Inspect the interaction of different power plants to supply loads\n",
-    "network.generators_t.p[:24*7].plot()"
+    "network.generators_t.p[: 24 * 7].plot()"
    ]
   },
   {
@@ -656,7 +665,7 @@
    "outputs": [],
    "source": [
     "# Inspect the change of energy capacity [MWh] in hydrogen_tank store to supply loads\n",
-    "network.stores_t.e[:24*7].plot()"
+    "network.stores_t.e[: 24 * 7].plot()"
    ]
   },
   {
@@ -666,7 +675,7 @@
    "outputs": [],
    "source": [
     "# Inspect the change of power [MW] in hydrogen_tank store to supply loads\n",
-    "network.stores_t.p[:24*7].plot()"
+    "network.stores_t.p[: 24 * 7].plot()"
    ]
   },
   {
@@ -676,7 +685,7 @@
    "outputs": [],
    "source": [
     "# Inspect the electrolysis input power\n",
-    "network.links_t.p0[\"electrolyser\"][:24*7].plot()"
+    "network.links_t.p0[\"electrolyser\"][: 24 * 7].plot()"
    ]
   },
   {
@@ -686,7 +695,7 @@
    "outputs": [],
    "source": [
     "# Inspect the charging flow\n",
-    "network.links_t.p0[\"hydrogen_flow\"][:24*7].plot()"
+    "network.links_t.p0[\"hydrogen_flow\"][: 24 * 7].plot()"
    ]
   },
   {
@@ -696,7 +705,7 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 2 network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e3-2.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d2_e3-2.nc\")"
    ]
   },
   {
