--- a/day 1/solutions/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/solutions/exercise_1_copper_plate_power_system_solution.ipynb
@@ -202,7 +202,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"../results/network_d1_e1-1.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d1_e1-1.nc\")"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 1 network\n",
-    "network = pypsa.Network(\"../results/network_d1_e1-1.nc\")"
+    "network = pypsa.Network(\"../../results/network_d1_e1-1.nc\")"
    ]
   },
   {
@@ -428,7 +428,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"../results/network_d1_e1-2.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d1_e1-2.nc\")"
    ]
   },
   {
@@ -452,7 +452,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 2 network\n",
-    "network = pypsa.Network(\"../results/network_d1_e1-2.nc\")"
+    "network = pypsa.Network(\"../../results/network_d1_e1-2.nc\")"
    ]
   },
   {
@@ -478,7 +478,7 @@
    "outputs": [],
    "source": [
     "# Import an example daily pattern\n",
-    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\n",
+    "solar_pattern = pd.read_csv(\"../../data/weather data/example_solar_daily_pattern.csv\")[\n",
     "    \"daily pattern\"\n",
     "]\n",
     "# annual time-series availability of solar farm (just a simplified example)\n",
@@ -581,13 +581,13 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 3 network\n",
-    "network.export_to_netcdf(\"../results/network_d1_e1-3.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d1_e1-3.nc\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-agora-h2",
+   "display_name": "pypsa-h2-training",
    "language": "python",
    "name": "python3"
   },
@@ -601,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
