--- a/day 1/solutions/exercise_2_adding_storage_units_solution.ipynb
+++ b/day 1/solutions/exercise_2_adding_storage_units_solution.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# import the check-point 3 network from exercise 1\n",
-    "n = pypsa.Network(\"../results/network_d1_e1-3.nc\")"
+    "n = pypsa.Network(\"../../results/network_d1_e1-3.nc\")"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "n.export_to_netcdf(\"../results/network_d1_e2-1.nc\")"
+    "n.export_to_netcdf(\"../../results/network_d1_e2-1.nc\")"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "# import check-point 1 network from exercise 2\n",
-    "n = pypsa.Network(\"../results/network_d1_e2-1.nc\")"
+    "n = pypsa.Network(\"../../results/network_d1_e2-1.nc\")"
    ]
   },
   {
@@ -360,7 +360,7 @@
    "outputs": [],
    "source": [
     "# import check-point 1 network from exercise 2\n",
-    "n = pypsa.Network(\"../results/network_d1_e2-1.nc\")"
+    "n = pypsa.Network(\"../../results/network_d1_e2-1.nc\")"
    ]
   },
   {
@@ -434,7 +434,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-agora-h2",
+   "display_name": "pypsa-h2-training",
    "language": "python",
    "name": "python3"
   },
@@ -448,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
