--- a/day 1/solutions/exercise_3_working_with_pypsa_links_solution.ipynb
+++ b/day 1/solutions/exercise_3_working_with_pypsa_links_solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
    "outputs": [],
    "source": [
     "# Import an example daily pattern\n",
-    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\n",
+    "solar_pattern = pd.read_csv(\"../../data/weather data/example_solar_daily_pattern.csv\")[\n",
     "    \"daily pattern\"\n",
     "]\n",
     "# annual time-series availability of solar farm (just a simplified example)\n",
@@ -300,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.export_to_netcdf(\"../results/network_d1_e3-1.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d1_e3-1.nc\")"
    ]
   },
   {
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.export_to_netcdf(\"../results/network_d1_e3-2.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d1_e3-2.nc\")"
    ]
   },
   {
@@ -515,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network = pypsa.Network(\"../results/network_d1_e3-2.nc\")"
+    "network = pypsa.Network(\"../../results/network_d1_e3-2.nc\")"
    ]
   },
   {
@@ -672,13 +672,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.export_to_netcdf(\"../results/network_d1_e3-3.nc\")"
+    "network.export_to_netcdf(\"../../results/network_d1_e3-3.nc\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-agora-h2",
+   "display_name": "pypsa-h2-training",
    "language": "python",
    "name": "python3"
   },
@@ -692,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
