change default solver to highs

--- a/day 2/excercise_1_basic_green_h2_system.ipynb
+++ b/day 2/excercise_1_basic_green_h2_system.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solver = \"cbc\""
+    "solver = \"highs\""
    ]
   },
   {
@@ -80,9 +80,11 @@
    "outputs": [],
    "source": [
     "# Import an example of wind daily pattern\n",
-    "wind_pattern = pd.read_csv(\"../data/weather data/example_onshore_wind_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "wind_pattern = pd.read_csv(\n",
+    "    \"../data/weather data/example_onshore_wind_daily_pattern.csv\"\n",
+    ")[\"daily pattern\"]\n",
     "# annual time-series availability of onshore wind (just a simplified example)\n",
-    "wind_profile = pd.Series(list(wind_pattern)*365, index=network.snapshots)"
+    "wind_profile = pd.Series(list(wind_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -179,9 +181,9 @@
     "lifetime = 20\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1590 * eur_to_usd # $/MW\n",
+    "CAPEX = 1590 * eur_to_usd  # $/MW\n",
     "FOM = 32 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "efficiency = 0.59"
    ]
   },
@@ -350,9 +352,11 @@
    "outputs": [],
    "source": [
     "# Import an example of solar daily pattern\n",
-    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\n",
+    "    \"daily pattern\"\n",
+    "]\n",
     "# annual time-series availability of solar (just a simplified example)\n",
-    "solar_profile = pd.Series(list(solar_pattern)*365, index=network.snapshots)"
+    "solar_profile = pd.Series(list(solar_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
