--- a/day 1/exercise_3_working_with_pypsa_links.ipynb
+++ b/day 1/exercise_3_working_with_pypsa_links.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solver = \"cbc\""
+    "solver = \"highs\""
    ]
   },
   {
@@ -588,7 +588,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-agora-h2",
+   "display_name": "pypsa-h2-training",
    "language": "python",
    "name": "python3"
   },
@@ -602,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
