--- a/day 2/excercise_3_complete_green_h2_system.ipynb
+++ b/day 2/excercise_3_complete_green_h2_system.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solver = \"cbc\""
+    "solver = \"highs\""
    ]
   },
   {
@@ -104,9 +104,11 @@
    "outputs": [],
    "source": [
     "# Import an example of wind daily pattern\n",
-    "wind_pattern = pd.read_csv(\"../data/weather data/example_onshore_wind_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "wind_pattern = pd.read_csv(\n",
+    "    \"../data/weather data/example_onshore_wind_daily_pattern.csv\"\n",
+    ")[\"daily pattern\"]\n",
     "# annual time-series availability of onshore wind (just a simplified example)\n",
-    "wind_profile = pd.Series(list(wind_pattern)*365, index=network.snapshots)"
+    "wind_profile = pd.Series(list(wind_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -116,9 +118,11 @@
    "outputs": [],
    "source": [
     "# Import an example of solar daily pattern\n",
-    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\n",
+    "    \"daily pattern\"\n",
+    "]\n",
     "# annual time-series availability of solar (just a simplified example)\n",
-    "solar_profile = pd.Series(list(solar_pattern)*365, index=network.snapshots)"
+    "solar_profile = pd.Series(list(solar_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -254,9 +258,9 @@
     "lifetime = 25\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1420 * eur_to_usd # $/MW\n",
+    "CAPEX = 1420 * eur_to_usd  # $/MW\n",
     "FOM = 28 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "\n",
     "efficiency = 1"
    ]
@@ -305,9 +309,9 @@
     "lifetime = 20\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 970  *eur_to_use # $/MW\n",
+    "CAPEX = 970 * eur_to_use  # $/MW\n",
     "FOM = 16 * eur_to_use  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "\n",
     "efficiency = 1"
    ]
@@ -345,9 +349,9 @@
     "lifetime = 20\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1590 * eur_to_usd # $/MW\n",
+    "CAPEX = 1590 * eur_to_usd  # $/MW\n",
     "FOM = 32 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "efficiency = 0.59"
    ]
   },
@@ -475,9 +479,11 @@
    "outputs": [],
    "source": [
     "# Import an example of wind daily pattern\n",
-    "load_pattern = pd.read_csv(\"../data/weather data/example_industrial_h2_demand_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "load_pattern = pd.read_csv(\n",
+    "    \"../data/weather data/example_industrial_h2_demand_daily_pattern.csv\"\n",
+    ")[\"daily pattern\"]\n",
     "# annual time-series availability of onshore wind (just a simplified example)\n",
-    "load_profile = pd.Series(list(load_pattern)*365, index=network.snapshots)"
+    "load_profile = pd.Series(list(load_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -513,33 +519,41 @@
     "eur_to_usd = 1.1\n",
     "lifetime = 20\n",
     "interest = 0.05\n",
-    "water_cost = 1.8 # EUR/m3_H2O --> this includes the water treatment costs applied to the seawater\n",
-    "water_demand_ratio= 21 # kgH2O/kgH2 --> how much water is needed to produce 1 kg of hydrogen?\n",
+    "water_cost = 1.8  # EUR/m3_H2O --> this includes the water treatment costs applied to the seawater\n",
+    "water_demand_ratio = (\n",
+    "    21  # kgH2O/kgH2 --> how much water is needed to produce 1 kg of hydrogen?\n",
+    ")\n",
     "\n",
-    "CAPEX = 1590 * eur_to_usd # $/MW\n",
+    "CAPEX = 1590 * eur_to_usd  # $/MW\n",
     "FOM = 32 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0 # $/MWh variable\n",
+    "VOM = 0  # $/MWh variable\n",
     "efficiency = 0.59\n",
     "\n",
     "# Calculate marginal cost for water consumption\n",
-    "# marginal cost [USD/MWh] = \n",
+    "# marginal cost [USD/MWh] =\n",
     "# water_cost [EUR/m3_H2O] * eur_to_usd [USD/EUR] / 1000 [kgH2O/m3_H2O] * water_demand_ratio [kgH2O/kgH2] / (33.33/1000 [MWh/kgH2])\n",
-    "water_cost = ((water_cost * eur_to_usd / 1000) * water_demand_ratio) / (33.33 / 1000) # 1 kgH2 = 33.33 kWh = 0.03333 MWh\n",
+    "water_cost = ((water_cost * eur_to_usd / 1000) * water_demand_ratio) / (\n",
+    "    33.33 / 1000\n",
+    ")  # 1 kgH2 = 33.33 kWh = 0.03333 MWh\n",
     "\n",
     "# Add a compressor to pressurize hydrogen produced by the electrolyser and feed it to the hydrogen storage\n",
     "# 1. Calculate the specific electricity consumption for compressor in kWh_el/kWh_H2. Assumption: 0.6 [kWh_el/kgH2]\n",
     "# 2. Calculate the specific energy consumption for the electrolyser in kWh_el/kWh_H2. This corresponds to the reciprocal of the electrolyser's efficiency.\n",
     "# 3. The sum of the two specific energy consumptions represents the total specific energy consumption for the electrolyser including compressor.\n",
     "# 4. Calculate the new efficiency of the electrolyser which is the reciprocal of the total specific energy consumption.\n",
-    "specific_consumption_compressor = 0.6 / 33.33  # 0.6 [kWh_el/kgH2] / 33.33 [kWh_H2/kgH2] --> kWh_el/kWh_H2\n",
-    "specific_consumption_electrolyser = 1 / efficiency # unit: kWh_el/kWh_H2\n",
-    "new_efficiency = 1 / (specific_consumption_compressor + specific_consumption_electrolyser)\n",
+    "specific_consumption_compressor = (\n",
+    "    0.6 / 33.33\n",
+    ")  # 0.6 [kWh_el/kgH2] / 33.33 [kWh_H2/kgH2] --> kWh_el/kWh_H2\n",
+    "specific_consumption_electrolyser = 1 / efficiency  # unit: kWh_el/kWh_H2\n",
+    "new_efficiency = 1 / (\n",
+    "    specific_consumption_compressor + specific_consumption_electrolyser\n",
+    ")\n",
     "\n",
     "# Compressor's techno-economic parameters are given as:\n",
     "lifetime_com = 25\n",
-    "CAPEX_COM = 1720 * eur_to_usd # $/MW\n",
+    "CAPEX_COM = 1720 * eur_to_usd  # $/MW\n",
     "FOM_COM = 34 * eur_to_usd  # $/MW fixed\n",
-    "VOM_COM = 0 # $/MWh variable"
+    "VOM_COM = 0  # $/MWh variable"
    ]
   },
   {
