Fix snapshot frequency in PyPSA notebooks from uppercase 'H' to lowercase 'h'

--- a/day 1/solutions/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/solutions/exercise_1_copper_plate_power_system_solution.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Set snapshots to the year 2023 and at hourly resolution\n",
-    "snapshots = pd.date_range(\"01-01-2023\", \"01-01-2024\", freq=\"H\", inclusive=\"left\")\n",
+    "snapshots = pd.date_range(\"01-01-2023\", \"01-01-2024\", freq=\"h\", inclusive=\"left\")\n",
     "network.set_snapshots(snapshots)"
    ]
   },
