--- a/day 1/exercise_3_working_with_pypsa_links.ipynb
+++ b/day 1/exercise_3_working_with_pypsa_links.ipynb
@@ -60,7 +60,7 @@
     "# Create empty PyPSA network\n",
     "network = pypsa.Network()\n",
     "# Set snapshots to the year 2023 and at hourly resolution\n",
-    "snapshots = pd.date_range(\"01-01-2023\", \"01-01-2024\", freq=\"H\", inclusive=\"left\")\n",
+    "snapshots = pd.date_range(\"01-01-2023\", \"01-01-2024\", freq=\"h\", inclusive=\"left\")\n",
     "network.set_snapshots(snapshots)"
    ]
   },
@@ -295,7 +295,7 @@
     "# Create empty PyPSA network\n",
     "network = pypsa.Network()\n",
     "# Set snapshots to the year 2023 and at hourly resolution\n",
-    "snapshots = pd.date_range(\"01-01-2023\", \"01-01-2024\", freq=\"H\", inclusive=\"left\")\n",
+    "snapshots = pd.date_range(\"01-01-2023\", \"01-01-2024\", freq=\"h\", inclusive=\"left\")\n",
     "network.set_snapshots(snapshots)\n",
     "network.snapshots"
    ]
