fix some typo mistakes

--- a/day 1/exercise_3_working_with_pypsa_links.ipynb
+++ b/day 1/exercise_3_working_with_pypsa_links.ipynb
@@ -468,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first need to create an atmosphere bus with a CO2 theoretical storage. When you need a component to store only without discharge, PyPSA `Store` is recommended."
+    "We first need to create an atmosphere bus with a CO2 theoretical storage. When you need a component to store energy without being restricted by its charge/discharge capacity (i.e. no max_hour restriction), PyPSA `Store` is recommended."
    ]
   },
   {
